--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -26,7 +26,9 @@ jobs:
         key: ${{ runner.os }}-openmpi-${{ hashFiles('**/CMakeLists.txt') }}
         restore-keys: |
           ${{ runner.os }}-openmpi-
-
+    - name: Clone submodules
+      run: git submodule update --init --recursive
+        
     - name: Install MPI
       run: |
         sudo apt-get update
