--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -31,7 +31,26 @@ jobs:
           ${{ runner.os }}-buildx-
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y singularity-container
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup
+
+    - name: Install Go
+      run: |
+        wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
+        sudo tar -C /usr/local -xzf go1.19.4.linux-amd64.tar.gz
+        echo 'export PATH=$PATH:/usr/local/go/bin' >> $GITHUB_ENV
+        source $GITHUB_ENV
+
+    - name: Install Singularity
+      run: |
+        export VERSION=3.10.0 && # adjust this as necessary \
+        wget https://github.com/hpcng/singularity/releases/download/v${VERSION}/singularity-${VERSION}.tar.gz \
+        tar -xzf singularity-${VERSION}.tar.gz \
+        cd singularity-${VERSION} \
+        ./mconfig \
+        make -C builddir \
+        sudo make -C builddir install
 
     - name: Build Singularity image
       run: singularity build matrix_multiplication.sif singularity.def
