--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -44,9 +44,9 @@ jobs:
 
     - name: Install Singularity
       run: |
-        export VERSION=3.10.0 && # adjust this as necessary \
-        wget https://github.com/hpcng/singularity/releases/download/v${VERSION}/singularity-${VERSION}.tar.gz \
-        tar -xzf singularity-${VERSION}.tar.gz \
+        export VERSION=4.1.3 && # adjust this as necessary \
+        wget "https://github.com/hpcng/singularity/releases/download/v${VERSION}/singularity-ce-${VERSION}.tar.gz" \
+        tar -xzf singularity-ce-${VERSION}.tar.gz \
         cd singularity-${VERSION} \
         ./mconfig \
         make -C builddir \
