--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install Singularity
       run: |
         export VERSION=4.1.3 && # adjust this as necessary 
-        wget "https://github.com/hpcng/singularity/releases/download/v${VERSION}/singularity-ce-${VERSION}.tar.gz" 
+        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
         tar -xzf singularity-ce-${VERSION}.tar.gz 
         cd singularity-${VERSION} 
         ./mconfig 
