--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -47,7 +47,7 @@ jobs:
         export VERSION=4.1.3 && # adjust this as necessary 
         wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
         tar -xzf singularity-ce-${VERSION}.tar.gz 
-        cd singularity-${VERSION} 
+        cd singularity-ce-4.1.3 
         ./mconfig 
         make -C builddir 
         sudo make -C builddir install
