--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -35,6 +35,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap
 
+    - name: Set timezone to avoid tzdata prompt
+      run: |
+        echo "tzdata tzdata/Areas select Etc" | sudo debconf-set-selections
+        echo "tzdata tzdata/Zones/Etc select UTC" | sudo debconf-set-selections
+
     - name: Install Go
       run: |
         wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
