--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
 
     steps:
     - name: Checkout code
@@ -43,25 +43,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata
+        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata singularity-container
 
-
-    - name: Install Go
-      run: |
-        wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
-        sudo tar -C /usr/local -xzf go1.19.4.linux-amd64.tar.gz
-        echo 'export PATH=$PATH:/usr/local/go/bin' >> $GITHUB_ENV
-        source $GITHUB_ENV
-
-    - name: Install Singularity
-      run: |
-        export VERSION=4.1.3 && # adjust this as necessary 
-        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
-        tar -xzf singularity-ce-${VERSION}.tar.gz 
-        cd singularity-ce-4.1.3 
-        ./mconfig 
-        make -C builddir 
-        sudo make -C builddir install
 
     - name: Enable user namespaces
       run: |
