--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -46,22 +46,43 @@ jobs:
         sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata
 
         
+    - name: Cache Go
+      id: go-cache
+      uses: actions/cache@v2
+      with:
+        path: /usr/local/go
+        key: ${{ runner.os }}-go-1.19.4
+        restore-keys: |
+          ${{ runner.os }}-go-
+
     - name: Install Go
+      if: steps.go-cache.outputs.cache-hit != 'true'
       run: |
         wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
         sudo tar -C /usr/local -xzf go1.19.4.linux-amd64.tar.gz
-        echo 'export PATH=$PATH:/usr/local/go/bin' >> $GITHUB_ENV
+        echo 'PATH=/usr/local/go/bin:$PATH' >> $GITHUB_ENV
         source $GITHUB_ENV
+
+    - name: Cache Singularity
+      id: singularity-cache
+      uses: actions/cache@v2
+      with:
+        path: /usr/local/singularity
+        key: ${{ runner.os }}-singularity-4.1.3
+        restore-keys: |
+          ${{ runner.os }}-singularity-
+
     - name: Install Singularity
+      if: steps.singularity-cache.outputs.cache-hit != 'true'
       run: |
-        export VERSION=4.1.3 && # adjust this as necessary 
-        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
+        VERSION=4.1.3
+        wget https://github.com/sylabs/singularity/releases/download/v${VERSION}/singularity-ce-${VERSION}.tar.gz
         tar -xzf singularity-ce-${VERSION}.tar.gz 
-        cd singularity-ce-4.1.3 
+        cd singularity-ce-${VERSION} 
         ./mconfig 
         make -C builddir 
         sudo make -C builddir install
-
+        sudo mv builddir/singularity /usr/local/singularity
     - name: Enable user namespaces
       run: |
         sudo sysctl -w kernel.unprivileged_userns_clone=1
