--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -75,10 +75,9 @@ jobs:
     - name: Install Singularity
       if: steps.singularity-cache.outputs.cache-hit != 'true'
       run: |
-        VERSION=4.1.3
-        wget https://github.com/sylabs/singularity/releases/download/v${VERSION}/singularity-ce-${VERSION}.tar.gz
-        tar -xzf singularity-ce-${VERSION}.tar.gz 
-        cd singularity-ce-${VERSION} 
+        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3}.tar.gz
+        tar -xzf singularity-ce-4.1.3.tar.gz 
+        cd singularity-ce-4.1.3
         ./mconfig 
         make -C builddir 
         sudo make -C builddir install
