--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Install Singularity
       if: steps.singularity-cache.outputs.cache-hit != 'true'
       run: |
-        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3}.tar.gz
+        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
         tar -xzf singularity-ce-4.1.3.tar.gz 
         cd singularity-ce-4.1.3
         ./mconfig 
