--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -75,13 +75,13 @@ jobs:
     - name: Install Singularity
       if: steps.singularity-cache.outputs.cache-hit != 'true'
       run: |
+        export VERSION=4.1.3 && # adjust this as necessary 
         wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
-        tar -xzf singularity-ce-4.1.3.tar.gz 
-        cd singularity-ce-4.1.3
+        tar -xzf singularity-ce-${VERSION}.tar.gz 
+        cd singularity-ce-4.1.3 
         ./mconfig 
         make -C builddir 
         sudo make -C builddir install
-        sudo mv builddir/singularity /usr/local/singularity
     - name: Enable user namespaces
       run: |
         sudo sysctl -w kernel.unprivileged_userns_clone=1
