--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -60,8 +60,9 @@ jobs:
       run: |
         wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
         sudo tar -C /usr/local -xzf go1.19.4.linux-amd64.tar.gz
-        echo 'PATH=/usr/local/go/bin:$PATH' >> $GITHUB_ENV
+        echo 'export PATH=$PATH:/usr/local/go/bin' >> $GITHUB_ENV
         source $GITHUB_ENV
+        
 
     - name: Cache Singularity
       id: singularity-cache
