--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -76,6 +76,7 @@ jobs:
         cd singularity-ce-${VERSION}
         ./mconfig
         make -C builddir
+        sudo make -C builddir install
         mkdir -p $HOME/.singularity/bin
         cp bin/singularity $HOME/.singularity/bin/singularity
         echo 'export PATH=$HOME/.singularity/bin:$PATH' >> $HOME/.bashrc
