--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -61,7 +61,7 @@ jobs:
       id: singularity-cache
       uses: actions/cache@v2
       with:
-        path: ~/.singularity
+        path: $HOME/.singularity/bin
         key: ${{ runner.os }}-singularity-4.1.3
         restore-keys: |
           ${{ runner.os }}-singularity-
@@ -78,7 +78,7 @@ jobs:
         make -C builddir
         sudo make -C builddir install
         mkdir -p $HOME/.singularity/bin
-        cp /usr/local/bin/singularity $HOME/.singularity/bin/
+        mv /usr/local/bin/singularity $HOME/.singularity/bin/singularity
         echo 'export PATH=$HOME/.singularity/bin:$PATH' >> $HOME/.bashrc
         source $HOME/.bashrc
     
