--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -61,7 +61,7 @@ jobs:
       id: singularity-cache
       uses: actions/cache@v2
       with:
-        path: $HOME/.singularity/bin
+        path: $HOME/.singularity/bin/singularity
         key: ${{ runner.os }}-singularity-4.1.3
         restore-keys: |
           ${{ runner.os }}-singularity-
