--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -28,47 +28,13 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata wget
+        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata wget go
 
-        
-     # Cache Go installation
-    - name: Cache Go
-      id: go-cache
-      uses: actions/cache@v2
-      with:
-        path: ~/.go
-        key: ${{ runner.os }}-go-1.19.4
-        restore-keys: |
-          ${{ runner.os }}-go-
-
-    # Install Go if not cached
-    - name: Install Go
-      if: steps.go-cache.outputs.cache-hit != 'true'
-      run: |
-        wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
-        tar -C $HOME -xzf go1.19.4.linux-amd64.tar.gz
-        echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
-        source $GITHUB_ENV
-
-    - name: Set PATH Go
-      if: steps.go-cache.outputs.cache-hit == 'true'
-      run: |
-        echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
-        source $GITHUB_ENV
       
-    # Cache Singularity installation
-    - name: Cache Singularity
-      id: singularity-cache
-      uses: actions/cache@v2
-      with:
-        path: $HOME/.singularity/bin/singularity
-        key: ${{ runner.os }}-singularity-4.1.3
-        restore-keys: |
-          ${{ runner.os }}-singularity-
+      
 
     # Install Singularity if not cached
     - name: Install Singularity
-      if: steps.singularity-cache.outputs.cache-hit != 'true'
       run: |
         export VERSION=4.1.3
         wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
@@ -80,13 +46,7 @@ jobs:
         mkdir -p $HOME/.singularity/bin
         cp /usr/local/bin/singularity $HOME/.singularity/bin/singularity
     
-    - name: Install Singularity
-      if: steps.singularity-cache.outputs.cache-hit == 'true'
-      run: |
-        cd ~
-        ls
-        sudo cp  $HOME/.singularity/bin/singularity /usr/local/bin/singularity
-      
+
 
     - name: Enable user namespaces
       run: |
