--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -31,7 +31,13 @@ jobs:
         sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata wget go
 
       
-      
+       # Install Go if not cached
+    - name: Install Go
+      run: |
+        wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
+        tar -C $HOME -xzf go1.19.4.linux-amd64.tar.gz
+        echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
+        source $GITHUB_ENV
 
     # Install Singularity if not cached
     - name: Install Singularity
