--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -49,8 +49,6 @@ jobs:
         ./mconfig
         make -C builddir
         sudo make -C builddir install
-        mkdir -p $HOME/.singularity/bin
-        cp /usr/local/bin/singularity $HOME/.singularity/bin/singularity
     
 
 
@@ -61,8 +59,8 @@ jobs:
 
 
     - name: Build Singularity image
-      run: $HOME/.singularity/bin/singularity build --fakeroot --notest --force matrix_multiplication.sif singularity.def
+      run: singularity build --fakeroot --notest --force matrix_multiplication.sif singularity.def
 
 
     - name: Run tests
-      run: $HOME/.singularity/bin/singularity test --fakeroot --writable matrix_multiplication.sif
+      run: singularity test --fakeroot --writable matrix_multiplication.sif
