--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -9,58 +9,80 @@ on:
       - main
 
 jobs:
-  Build_Containerize:
+  Build_and_test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-          
-    - name: Clone submodules
-      run: git submodule update --init --recursive 
+      - uses: actions/checkout@v4
 
-    - name: Set timezone and DEBIAN_FRONTEND
-      run: |
-        echo "tzdata tzdata/Areas select Etc" | sudo debconf-set-selections
-        echo "tzdata tzdata/Zones/Etc select UTC" | sudo debconf-set-selections
-        export DEBIAN_FRONTEND=noninteractive
-        
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata wget
+      - name: Clone submodules
+        run: git submodule update --init --recursive
 
-      
+      - name: Install MPI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openmpi-bin openmpi-common libopenmpi-dev
+
+      - name: Configure CMake
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DMPI_C_COMPILER=mpicc -DMPI_CXX_COMPILER=mpicxx
+
+      - name: Build
+        run: cmake --build ${{github.workspace}}/build --config Release
+
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+        run: ctest -C Release
+
+  Containerize_and_run:
+    runs-on: ubuntu-latest
+
+    env: # Or as an environment variable
+      SSH_KEY: ${{ secrets.SSH_KEY }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Clone submodules
+        run: git submodule update --init --recursive
+
+#      - name: Set timezone and DEBIAN_FRONTEND
+#        run: |
+#          echo "tzdata tzdata/Areas select Etc" | sudo debconf-set-selections
+#          echo "tzdata tzdata/Zones/Etc select UTC" | sudo debconf-set-selections
+#          export DEBIAN_FRONTEND=noninteractive
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libseccomp-dev pkg-config squashfs-tools cryptsetup libfuse3-dev uidmap tzdata wget
+
        # Install Go if not cached
-    - name: Install Go
-      run: |
-        wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
-        tar -C $HOME -xzf go1.19.4.linux-amd64.tar.gz
-        echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
-        source $GITHUB_ENV
+      - name: Install Go
+        run: |
+          wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
+          tar -C $HOME -xzf go1.19.4.linux-amd64.tar.gz
+          echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
+          source $GITHUB_ENV
 
-    # Install Singularity if not cached
-    - name: Install Singularity
-      run: |
-        export VERSION=4.1.3
-        wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
-        tar -xzf singularity-ce-${VERSION}.tar.gz
-        cd singularity-ce-${VERSION}
-        ./mconfig
-        make -C builddir
-        sudo make -C builddir install
-    
+      # Install Singularity if not cached
+      - name: Install Singularity
+        run: |
+          export VERSION=4.1.3
+          wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
+          tar -xzf singularity-ce-${VERSION}.tar.gz
+          cd singularity-ce-${VERSION}
+          ./mconfig
+          make -C builddir
+          sudo make -C builddir install
 
+      - name: Build Singularity image
+        run: singularity build --fakeroot --notest --force matrix_multiplication.sif singularity.def
 
-    - name: Enable user namespaces
-      run: |
-        sudo sysctl -w kernel.unprivileged_userns_clone=1
-        sudo sysctl -w user.max_user_namespaces=15000
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
 
-
-    - name: Build Singularity image
-      run: singularity build --fakeroot --notest --force matrix_multiplication.sif singularity.def
-
-
-    - name: Run tests
-      run: singularity test --fakeroot --writable matrix_multiplication.sif
+      - name: Transfer files
+        run: |
+          sshpass -p ${SSH_KEY} scp matrix_multiplication.sif a08trb64@login.g100.cineca.it:~
+          sshpass -p ${SSH_KEY} scp job.sh a08trb64@login.g100.cineca.it:~
