--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -80,7 +80,7 @@ jobs:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
           tar -xzf singularity-ce-4.1.3.tar.gz
           cd singularity-ce-4.1.3
-          ./mconfig
+          ./mconfig -b singularity_build
           make -C singularity_build
         
 
