--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -60,11 +60,6 @@ jobs:
        # Install Go if not cached
       - name: Install Go
         uses: actions/setup-go@v5
-#        run: |
-#          wget https://dl.google.com/go/go1.19.4.linux-amd64.tar.gz
-#          tar -C $HOME -xzf go1.19.4.linux-amd64.tar.gz
-#          echo 'export PATH=$HOME/go/bin:$PATH' >> $GITHUB_ENV
-#          source $GITHUB_ENV
 
       # Install Singularity if not cached
       - name: Cache Singularity
@@ -80,8 +75,8 @@ jobs:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
           tar -xzf singularity-ce-4.1.3.tar.gz
           cd singularity-ce-4.1.3
-          ./mconfig -b singularity_build
-          make -C singularity_build
+          ./mconfig -b ../singularity_build
+          make -C ../singularity_build
         
 
       - name: Save Singularity
