--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -46,12 +46,6 @@ jobs:
       - name: Clone submodules
         run: git submodule update --init --recursive
 
-#      - name: Set timezone and DEBIAN_FRONTEND
-#        run: |
-#          echo "tzdata tzdata/Areas select Etc" | sudo debconf-set-selections
-#          echo "tzdata tzdata/Zones/Etc select UTC" | sudo debconf-set-selections
-#          export DEBIAN_FRONTEND=noninteractive
-
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -75,8 +69,9 @@ jobs:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce-4.1.3.tar.gz
           tar -xzf singularity-ce-4.1.3.tar.gz
           cd singularity-ce-4.1.3
-          ./mconfig -b ../singularity_build
-          make -C ../singularity_build
+          ./mconfig -b /singularity_build
+          make -C /singularity_build
+          mv ./singularity_build ../
         
 
       - name: Save Singularity
