--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -71,19 +71,18 @@ jobs:
           cd singularity-ce-4.1.3
           ./mconfig -b ./singularity_build
           make -C ./singularity_build
-          mv ./singularity_build ../
         
-
       - name: Save Singularity
         if: steps.cache-singularity.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4
         with:
           path: |
-            /singularity_build/
+            singularity-ce-4.1.3
           key: ${{ runner.os }}-singularity
 
       - name: Install Singularity
         run: |
+          cd singularity-ce-4.1.3
           sudo make -C singularity_build install
 
       - name: Build Singularity image
