--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -60,7 +60,8 @@ jobs:
         uses: actions/cache/restore@v4
         id: cache-singularity
         with:
-          path: singularity_build
+          path: |
+            singularity-ce-4.1.3
           key: ${{ runner.os }}-singularity
 
       - name: Build Singularity
@@ -93,5 +94,6 @@ jobs:
 
       - name: Transfer files
         run: |
-          sshpass -p ${SSH_KEY} scp matrix_multiplication.sif a08trb64@login.g100.cineca.it:~
-          sshpass -p ${SSH_KEY} scp job.sh a08trb64@login.g100.cineca.it:~
+          ssh-keygen -R login.g100.cineca.it
+          sshpass -p ${SSH_KEY} scp -o StrictHostKeyChecking=no matrix_multiplication.txt a08trb64@login.g100.cineca.it:~
+          sshpass -p ${SSH_KEY} scp -o StrictHostKeyChecking=no job.sh a08trb64@login.g100.cineca.it:~
