--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -94,5 +94,7 @@ jobs:
 
       - name: Transfer files
         run: |
-          sshpass -p ${SSH_KEY} scp -o StrictHostKeyChecking=allow-new matrix_multiplication.txt a08trb64@login.g100.cineca.it:~
+          sshpass -p ${SSH_KEY} scp -o StrictHostKeyChecking=accept-new matrix_multiplication.txt a08trb64@login.g100.cineca.it:~
           sshpass -p ${SSH_KEY} scp -o StrictHostKeyChecking=no job.sh a08trb64@login.g100.cineca.it:~
+          sshpass -p ${SSH_KEY} ssh -o StrictHostKeyChecking=no a08trb64@login.g100.cineca.it -t "exec sbatch job.sh"
+          
